Upstream changes for 2.2.0 release
